Se agrega footer

--- a/index.html
+++ b/index.html
@@ -362,6 +362,36 @@
     </section>
 
 
+    <footer id="Footer" class="container-fluid bg-info">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-6">
+            <h1 class="fw-bold text-light">Viajes chile</h1>
+          </div>
+          <div>
+            <div class="text-end py-2">
+              <h6>Puedes contactarme en mis redes sociales.</h6>
+              <a href="https://github.com/victorPenafiel" target="blank">
+                <i class="fab fa-github-square fa-2x mx-2" data-bs-toggle="tooltip" data-bs-placement="top" title="GitHub">
+                </i>
+              </a>
+              <a href="https://www.linkedin.com/in/victorpenafiel/" target="blank">
+                <i class="fab fa-linkedin fa-2x mx-2" data-bs-toggle="tooltip" data-bs-placement="top" title="LinkedIn">
+                </i>
+              </a>
+              <a href="https://twitter.com/Newen_Do" target="_blank">
+                <i class="fab fa-twitter-square fa-2x mx-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Twitter">
+                </i>
+              </a>
+              <a href="https://web.facebook.com/victorpenafiel?_rdc=1&_rdr" target="_blank">
+                <i class="fab fa-facebook-square fa-2x mx-2"data-bs-toggle="tooltip" data-bs-placement="top" title="Facebook">
+                </i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
